OldArchive/b41e500fd98c2d2a58930d9fda100659-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:8:5: error: decltype evaluates to ‘__gnu_cxx::__normal_iterator<int*, std::vector<int> >&’, which is not a class or enumeration type
     decltype((it))::value_type val;
     ^
main.cpp:8:32: error: expected initializer before ‘val’
     decltype((it))::value_type val;
                                ^
